# python-project-50

./: .gitignore  2.cast  Makefile  README.md  build.gradle.kts  json.cast  plain.cast  pyproject.toml
.github/workflows/: lint-and-test.yml  main.yml
gendiff/: __init__.py  build_diff.py  format_json.py  formatter.py  fromat_plain.py  gendiff_help.py  parcer.py
gendiff/formatters/: constant.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/: big_json.txt  file3s.json  results.py
